--- a/css/style-contacto-oscuro.css
+++ b/css/style-contacto-oscuro.css
@@ -13,8 +13,8 @@
     margin: 0%;
     box-sizing: border-box;
     font-family: "Bitter";
-    color: #D9D9D9;
-    background-color: black;
+    color: black;
+    background-color: #D9D9D9;
 }
 .header-li:hover{
     font-size: 1.5vw;
@@ -94,7 +94,7 @@ margin-top: 5%;
     width: 20%;
     font-size: 1.75vw;
     font-family: "Breaking Bad";
-    border: 1px solid #d9d9d9;
+    border: 1px solid black;
 }
 .main-form{
 
@@ -112,13 +112,13 @@ margin-top: 5%;
     resize: none;
     height: 25%;
     font-size: 0.88vw;
-    border: 1px solid #d9d9d9;
+    border: 1px solid black;
 }
 .form-inputs{
     
     border:0;
     font-size: 1vmax;
-    border-bottom:1px solid #d9d9d9;;
+    border-bottom:1px solid black;;
 
 }
 /*Esta clase se mostrara cuando el calor introducido se incorrecto y se pondra el campo rojo*/
@@ -132,7 +132,7 @@ margin-top: 5%;
     align-items: center;
     cursor: pointer;
     font-family: arial;
-    background-color: black;
+    background-color: #d9d9d9;
 }
 .span_error_forms{
     color: red;
@@ -213,13 +213,13 @@ margin-top: 5%;
         resize: none;
         height: 25%;
         font-size: 3vw;
-        border: 1px solid #d9d9d9;
+        border: 1px solid black;
     }
     .form-inputs{
 
         border:0;
         font-size: 3vw;
-        border-bottom:1px solid #d9d9d9;;
+        border-bottom:1px solid black;
 
     }
     .form-button{
@@ -235,7 +235,7 @@ margin-top: 5%;
         align-items: center;
         cursor: pointer;
         font-family: arial;
-        background-color: black;
+        background-color: #d9d9d9;
     }
     .span_error_forms{
         color: red;
