--- a/css/style-login-oscuro.css
+++ b/css/style-login-oscuro.css
@@ -15,8 +15,8 @@
     margin: 0%;
     box-sizing: border-box;
     font-family: "Bitter";
-    color: #D9D9D9;
-    background-color: black;
+    color: black;
+    background-color: #d9d9d9;
 }
 .body{
     
@@ -135,20 +135,20 @@ a {text-decoration: none}
     width: 40%;
     font-size: 1.75vw;
     font-family: "Breaking Bad";
-    border: 1px solid #d9d9d9;
+    border: 1px solid black;
 
 }
 .form-inputs{
     
     border:0;
     font-size: 1vmax;
-    border-bottom:1px solid #d9d9d9;;
+    border-bottom:1px solid black;;
 
 }.form-inputs-contraseña{
 
      border:0;
      font-size: 1vmax;
-     border-bottom:1px solid #d9d9d9;;
+     border-bottom:1px solid black;
 
  }
 .form-checkboxs{
@@ -265,14 +265,14 @@ a {text-decoration: none}
         width: 40%;
         font-size: 5vw;
         font-family: "Breaking Bad";
-        border: 1px solid #d9d9d9;
+        border: 1px solid black;
         align-self: center;
     }
     .form-inputs{
 
         border:0;
         font-size: 3vw;
-        border-bottom:1px solid #d9d9d9;;
+        border-bottom:1px solid black;
 
     }
     ul.main-nav-ul{
@@ -399,5 +399,5 @@ a {text-decoration: none}
     border-left:    1px solid hsla(200, 10%, 50%,100);
     height: 95%;
     width:          1px;    
-    color: #d9d9d9;   
+    color: black;
 }
