--- a/css/style-oscuro.css
+++ b/css/style-oscuro.css
@@ -1,5 +1,4 @@
 /*Importacion de fuente breaking bad*/
-
 @font-face {
     font-family: "Breaking Bad";
     src: url("../fonts/Heart Breaking Bad.otf");
@@ -9,14 +8,13 @@
     src: url("../fonts/Bitter/static/Bitter-Medium.ttf");
 }
 /*Eliminacion de padding y margis asi como aplicar el border box y el color de fondo y color de letra que va a tener toda la pagina por defecto*/
-
 *{
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
     font-family: "Bitter";
-    color: #D9D9D9;
-    background-color: black;
+    color: black;
+    background-color: #d9d9d9;
 }
 .body{
     
@@ -29,9 +27,7 @@ margin-top: 5%;
 .footer-contacto{
     display: none;
 }
-
 /*Display de footer y header de forma que quede todo bien alineado*/
-
 .footer-nav{
     display: flex;
     align-items: center;
@@ -48,10 +44,8 @@ margin-top: 5%;
 
 }
 /*Eliminacion de subrayado en enlaces*/
-
 a {text-decoration: none}
 /*Eliminacion de punto en las listas, asi como animacion al pasar el raton por encima*/
-
 .header-li{
     font-size: 1.2vw;
     list-style:none;
@@ -64,10 +58,31 @@ a {text-decoration: none}
     transition: all 0.2s ease-in;
 
 }
+@keyframes rotation {
+    25% {
+        transform: rotate(360deg);
+      }
+    50% {
+        transform: rotate(360deg);
+      }
+    75% {
+        transform: rotate(360deg);
+      }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 .header-li--logo{
     width: 7vw;
 
-}.header-ul{
+}
+/*Animacion de rotacion de logo*/
+.header-li--logo:hover{
+    animation: rotation 2s alternate ;
+}
+
+
+.header-ul{
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -92,20 +107,12 @@ a {text-decoration: none}
    
 
 }
-/*Colocacion de la imagen principal en pantallas*/
-
 .main-description-image{
     width: 100%;
     padding: 3%;
 
 }
-.main-description-h2{
-    padding: 3%;
-
-}
-.main-description-description{
-    padding: 3%;
-}
+/*Colocacion de la imagen principal en pantallas*/
 .main-image{
     
     grid-row-start: 1;
@@ -119,8 +126,8 @@ a {text-decoration: none}
 
 
 }
-/*Colocacion de el formulario en pantalla asi como su disposicion*/
-.main-form{
+/*Colocacion en el main del navegador asi como la disposicion de sus elementos*/
+.main-nav{
     grid-column-start: 3;
     font-family:"Breaking Bad" ;
     display: flex;
@@ -129,52 +136,22 @@ a {text-decoration: none}
     margin-left: 3%;
 
 
-}
-/*Estilos aplicados a los inputs y botones del formulario*/
-.form-button{
-    width: 40%;
-    font-size: 1.75vw;
-    font-family: "Breaking Bad";
-    border: 1px solid #d9d9d9;
+}.main-description-h2{
+    padding: 3%;
 
 }
-.form-inputs{
-    
-    border:0;
-    font-size: 1vmax;
-    border-bottom:1px solid #d9d9d9;;
-
-}.form-inputs-contraseña{
-
-     border:0;
-     font-size: 1vmax;
-     border-bottom:1px solid #d9d9d9;;
-
- }
-.form-checkboxs{
-    display: inline-flex;
-    align-items: center;
-    cursor: pointer;
-    font-family: arial;
+.main-description-description{
+    padding: 3%;
 }
-.form-button{
-    
-
-}
-.main-nav-font{
-
-
-}.main-form-inputs{
+/*Disposicion del menu de navegacion de la derecha*/
+.main-nav-ul{
     display: flex;
     align-items:flex-start;
     flex-direction: column;
-    justify-content: space-evenly;
-    height:75%;
+    align-content: space-between;
+    font-size: 3.5vw;
+    list-style:none;
     margin-left: 2%;
-
-}.main-title{
-    grid-column-end: 4;
-    grid-column-start: 2;
 
 }.main-title{
     grid-column-end: 4;
@@ -191,108 +168,26 @@ a {text-decoration: none}
     
 
 }
+/*Media query para que la web sea responsive a partir de este punto toda pantalla que sea inferior a 850px se le aplicara este css*/
 @media (max-width: 850px) {
-    /*Modificacin footer y header para hacerlo resposive eliminando algunos elementos y reajustando su tamaño*/
-    .header-li--logo{
-        width: 9vw;
-
-    }
-    .header-li{
-        font-size: 3vw;
-        list-style:none;
-        transition: all 0.2s ease-in;
-
-
-    }
-    .header-li:hover{
-        font-size: 3vw;
-        transition: all 0.2s ease-in;
-
-    }
-    #header_contacto{
-        display: none;
-    }
-    #header_inicio{
-        display: none;
-    }
-    .footer-nav{
-        display: flex;
-        align-items: center;
-        justify-content:space-around;
-        font-size: 3vw;
-    }
-    .footer-condiciones{
-        display: none;
-    }
-    .footer-cookies{
-        display: none;
-    }
-    .footer-walter{
-        display: none;
-    }
-    .footer-nosotros{
-        display: none;
-    }
-    .footer-contacto{
-        display: block;
-    }
-    /*-------------------------------*/
-    /*Nueva disposicion del formulario para hacerlo acorde al nuevo tamaño de la pantalla*/
-    .main-form-inputs{
-        height: 50%;
-        display: flex;
-        align-items:flex-start;
-        flex-direction: column;
-        justify-content: space-around;
-
-        margin-left: 2%;
-
-    }
-    .main-form{
-        grid-column-start: 3;
-        font-family:"Breaking Bad" ;
-        display: flex;
-        align-items:center;
-        align-content: space-evenly;
-        margin-left: 3%;
-
-
-    }
-    div span{
-        font-size: 3vw;
-    }
-    .form-button {
-        width: 40%;
-        font-size: 5vw;
-        font-family: "Breaking Bad";
-        border: 1px solid #d9d9d9;
-        align-self: center;
-    }
-    .form-inputs{
-
-        border:0;
-        font-size: 3vw;
-        border-bottom:1px solid #d9d9d9;;
-
-    }
     ul.main-nav-ul{
         font-size: 8vw;
     }
-    .form-hr-vertical{
+    /*Elimacion de la barra separadora del menu principal*/
+    .nav-hr-vertical{
         display: none;
     }
     span.font-breaking-bad-title{
         font-family: Breaking Bad;
         font-size: 7vw;
     }
-    /*Nueva disposicion del main*/
+    /*Nueva disposicion del main acorde, a dispositivos mas alargados tipo moviles*/
     .main{
         display: grid;
         grid-template-rows:3fr 0.5fr 5fr ;
         grid-template-columns:5fr 5fr ;
     }
     /*Se mueve la descripcion hacia abajo*/
-
     .main-description{
 
         grid-column-start: 1;
@@ -310,7 +205,6 @@ a {text-decoration: none}
 
     }
     /*Se pone la imagen en la izquierda*/
-
     .main-image{
         grid-row-start: 1;
         grid-row-end: 1;
@@ -321,8 +215,8 @@ a {text-decoration: none}
 
 
     }
-    /*Se pone el formulario a la derecha junto a la foto */
-    .main-form{
+    /*Se pone el menu de navegacion a la derecha junto a la foto */
+    .main-nav{
          grid-column-start: 2;
          grid-row-start: 1;
          font-family:"Breaking Bad" ;
@@ -333,9 +227,9 @@ a {text-decoration: none}
 
 
      }.main-description-h2{
-          font-size: 5vw;
+    font-size: 5vw;
           padding: 3%;
-      }
+     }
     .main-description-description{
         font-size: 3vw;
         padding: 3%;
@@ -349,9 +243,8 @@ a {text-decoration: none}
          margin-left: 2%;
 
      }.main-title{
-          text-align: center;
-          grid-column-start: 1;
-          top:1vw;
+    text-align: center;
+    grid-column-start: 1;
 
       }.main-title-h1{
            font-weight: normal;
@@ -362,33 +255,92 @@ a {text-decoration: none}
     .main-title-image{
         width: 99%;
     }
+    /*Modificacin footer y header para hacerlo resposive eliminando algunos elementos y reajustando su tamaño*/
+    .header-li--logo {
+        width: 9vw;
 
+    }
+
+    .header-li {
+        font-size: 3vw;
+        list-style: none;
+        transition: all 0.2s ease-in;
+
+
+    }
+    .header-li:hover{
+        font-size: 3vw;
+        transition: all 0.2s ease-in;
+
+    }
+    /*Se eliminan los elementos necesarios para que el footer ni el header ocupe mucho*/
+
+    #header_contacto {
+        display: none;
+    }
+
+    #header_inicio {
+        display: none;
+    }
+
+    .footer-nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 3vw;
+    }
+
+    .footer-condiciones {
+        display: none;
+    }
+
+    .footer-cookies {
+        display: none;
+    }
+
+    .footer-walter {
+        display: none;
+    }
+
+    .footer-nosotros {
+        display: none;
+    }
+
+    .footer-contacto {
+        display: block;
+    }
+    .font-breaking-bad:hover{
+       font-size: 3.5vw;
+        transition: all 0.2s ease-in;
+
+    }
+    .font-breaking-bad{
+        font-family: Breaking Bad;
+        transition: all 0.2s ease-in;
+
+    }
 }
-/*Aplicacion de la fuente importada a una clase para usarla despues en el main*/
+/*-------------------------------*/
 
+/*Aplicacion de la fuente importada a una clase para usarla despues en el main*/
 .font-breaking-bad{
     font-family: Breaking Bad;
     transition: all 0.2s ease-in;
 
 }
 /*Animacion para hacer que en el menu principal se agrande la letra al pasar por encima*/
-
 .font-breaking-bad:hover{
     font-size: 3.7vw;
     
     transition: all 0.2s ease-in;
 
 }
-.font-breaking-bad::first-letter:hover{
-    font-size: 3.7vw;
-    color: #FDD929;
-    transition: all 0.2s ease-in;
-}
+
 .font-breaking-bad-title{
     font-family: Breaking Bad;
     font-size: 5vw;
 }
-.form-hr-vertical{
+.nav-hr-vertical{
     border:         none;
     border-left:    1px solid hsla(200, 10%, 50%,100);
     height: 75%;
@@ -399,5 +351,14 @@ a {text-decoration: none}
     border-left:    1px solid hsla(200, 10%, 50%,100);
     height: 95%;
     width:          1px;    
-    color: #d9d9d9;   
+    color: black;
 }
+/*disposisicon del easter egg de la nieve al pasar por encima del logo*/
+.snow-gif {
+    position: absolute;
+    align-self: flex-start;
+    width: 7%;
+    left: 6%;
+    top: 0;
+}
+
