--- a/css/style-presentacion-episodio-oscuro.css
+++ b/css/style-presentacion-episodio-oscuro.css
@@ -13,8 +13,8 @@
     margin: 0%;
     box-sizing: border-box;
     font-family: "Bitter";
-    color: #D9D9D9;
-    background-color: black;
+    color: black;
+    background-color: #d9d9d9;
 }
 .body{
     
