--- a/css/style-presentacion-personaje-oscuro.css
+++ b/css/style-presentacion-personaje-oscuro.css
@@ -13,8 +13,8 @@
     margin: 0%;
     box-sizing: border-box;
     font-family: "Bitter";
-    color: #D9D9D9;
-    background-color: black;
+    color: black;
+    background-color: #d9d9d9;
 }
 .body{
     
@@ -44,10 +44,8 @@ margin-top: 5%;
 
 }
 /*Eliminacion de subrayado en enlaces*/
-
 a {text-decoration: none}
 /*Eliminacion de punto en las listas, asi como animacion al pasar el raton por encima*/
-
 .header-li{
     font-size: 1.2vw;
     list-style:none;
@@ -76,7 +74,8 @@ a {text-decoration: none}
 
 }
 
-/*Asignacin de fuentes para el titulo de la pagina que es el epidosdio*/
+/*Asignacin de fuentes para el titulo de la pagina que es el personaje*/
+
 .font-breaking-bad-title{
     padding-top: 1.5%;
     justify-self:center;
@@ -91,18 +90,14 @@ a {text-decoration: none}
     font-weight: normal;
     grid-column-start: 2;
 }
-/*Esta nueva fuente se usara para indicar el numero de capitulo asi como su temporada*/
-.main-description-h3{
-    font-size: 1vw;
-    font-weight: normal;
-    grid-column-start: 2;
-}
 /*Asignacion de tamañlo para cada linea de parrafo*/
+
 p{
     padding-top: 1.5%;
     font-size: 0.90vw;
 }
 /*Disposicion de todas las linead del parrafo*/
+
 .main-parrafo{
     padding-top: 1.5%;
     display: flex;
@@ -117,7 +112,8 @@ p{
     grid-template-columns: 2fr 8fr 2fr;
 
 }
-/*Disposicion de la imagen del episodio asi como una mascara de recorte*/
+/*Disposicion de la imagen del personaje asi como una mascara de recorte*/
+
 .main-image{
     padding-top: 1.5%;
     justify-self:center;
@@ -137,8 +133,10 @@ div{
     font-size: 1vw;
 }
 /*Media query para que la web sea responsive a partir de este punto toda pantalla que sea inferior a 850px se le aplicara este css*/
-@media(max-width: 850px){
+
+@media(max-width: 850px) {
     /*Se ajusta el tamaño de las fuentes y se centra todo*/
+
     .main{
         display: flex;
         flex-direction: column;
@@ -150,9 +148,6 @@ div{
     .main-description-h2{
         font-size: 4vw;
     }
-    .main-description-h3{
-        font-size: 2vw;
-    }
     .main-parrafo p{
         font-size: 1.7vw;
     }
@@ -160,13 +155,14 @@ div{
         height: 70%;
     }
     /*Modificacin footer y header para hacerlo resposive eliminando algunos elementos y reajustando su tamaño*/
-    .header-li--logo{
+    .header-li--logo {
         width: 9vw;
 
     }
-    .header-li{
+
+    .header-li {
         font-size: 3vw;
-        list-style:none;
+        list-style: none;
         transition: all 0.2s ease-in;
 
 
@@ -176,33 +172,40 @@ div{
         transition: all 0.2s ease-in;
 
     }
-    #header_contacto{
+
+    #header_contacto {
         display: none;
     }
-    #header_inicio{
+
+    #header_inicio {
         display: none;
     }
-    .footer-nav{
+
+    .footer-nav {
         display: flex;
         align-items: center;
-        justify-content:space-around;
+        justify-content: space-around;
         font-size: 3vw;
     }
-    .footer-condiciones{
+
+    .footer-condiciones {
         display: none;
     }
-    .footer-cookies{
+
+    .footer-cookies {
         display: none;
     }
-    .footer-walter{
+
+    .footer-walter {
         display: none;
     }
-    .footer-nosotros{
+
+    .footer-nosotros {
         display: none;
     }
-    .footer-contacto{
+
+    .footer-contacto {
         display: block;
     }
-    /*-------------------------------*/
 }
-
+/*-------------------------------*/
