--- a/css/style-presentacion-personaje.css
+++ b/css/style-presentacion-personaje.css
@@ -106,6 +106,14 @@ p{
     grid-column-start: 2;
     justify-self:center;
 }
+#div{
+    display: flex;
+}
+#ul_personaje{
+    padding-left: 5%;
+    padding-bottom: 5%;
+    padding-top: 5%;
+}
 .main{
     
     display: grid;
@@ -119,7 +127,7 @@ p{
     justify-self:center;
     object-fit: cover;
     object-position: right;
-    width: 100%;
+    height: 40vmax;
 
 
 }
