--- a/css/style.css
+++ b/css/style.css
@@ -309,14 +309,15 @@ a {text-decoration: none}
     .footer-contacto {
         display: block;
     }
-    .font-breaking-bad:hover{
-       font-size: 3.5vw;
-        transition: all 0.2s ease-in;
+
+    .font-breaking-bad{
+        font-size:7vw;
+
+        transition: none;
 
     }
-    .font-breaking-bad{
-        font-family: Breaking Bad;
-        transition: all 0.2s ease-in;
+    .font-breaking-bad:hover{
+        transition: none;
 
     }
 }
